--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "ex11",
+  "name": "atv11",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev" : "nodemon app.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -13,8 +12,12 @@
   "dependencies": {
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.3",
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
-    "express": "^4.18.2",
-    "nodemon": "^3.0.3"
+    "express": "^4.19.1",
+    "express-session": "^1.18.0",
+    "multer": "^1.4.5-lts.1",
+    "mysql": "^2.18.1",
+    "nodemon": "^3.1.0"
   }
 }
